--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
  
 <body>
-  <h1>M. Trujillo</h1>
-  <p>Welcome to my website!</p>
+  <h1>This is the main page</h1>
+  <p>This is the sub headline for this page 
+  </p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
